stderr
HikerTest.java:15: error: incompatible types: int cannot be converted to String
        String actual = aa.judge(hand);
                                ^
1 error
